--- a/rdfcil/cifar100_iscf10task.yaml
+++ b/rdfcil/cifar100_iscf10task.yaml
@@ -68,11 +68,11 @@ model:
   - 120
   finetuning_epochs: 0
   finetuning_lr: 0.005
-  lambda_ce: 0.9
-  lambda_hkd: 0.2
+  lambda_ce: 0.8
+  lambda_hkd: 0.3
+  lambda_sp: 50
+  lambda_ft: 0.2 # 1
   lambda_weq: 0.75
-  # lambda_ce: 1
-  # lambda_hkd: 0.1
   fc_bias: true  
   lambda_sp: 100
   num_inv_iters: 5000
