--- a/rdfcil/cifar100_iscf20task.yaml
+++ b/rdfcil/cifar100_iscf20task.yaml
@@ -68,9 +68,11 @@ model:
   - 120
   finetuning_epochs: 0
   finetuning_lr: 0.005
-  lambda_ce: 1
-  lambda_hkd: 0.05
-  lambda_sp: 100
+  lambda_ce: 0.8
+  lambda_hkd: 0.3
+  lambda_sp: 50
+  lambda_ft: 0.2 # 1
+  lambda_weq: 0.75
   num_inv_iters: 5000
   inv_lr: 0.001
   inv_tau: 1000.0
