--- a/rdfcil/cifar100_iscf.yaml
+++ b/rdfcil/cifar100_iscf.yaml
@@ -70,8 +70,9 @@ model:
   finetuning_epochs: 0
   finetuning_lr: 0.005
   lambda_ce: 0.8
-  lambda_hkd: 0.3
-  lambda_sp: 100
+  lambda_hkd: 0.4
+  lambda_sp: 50
+  lambda_ft: 0.5 # 1
   lambda_weq: 0.75
   num_inv_iters: 5000
   inv_lr: 0.001
