--- a/rdfcil/config/cifar100.yaml
+++ b/rdfcil/config/cifar100.yaml
@@ -70,6 +70,7 @@ model:
   finetuning_lr: 0.005
   lambda_ce: 0.5
   lambda_hkd: 0.15
+  lambda_ft: 1.0
   lambda_rkd: 0.5
   num_inv_iters: 5000
   inv_lr: 0.001
