--- a/rdfcil/cifar100_iscf_hkd.yaml
+++ b/rdfcil/cifar100_iscf_hkd.yaml
@@ -70,19 +70,19 @@ model:
   finetuning_epochs: 0
   finetuning_lr: 0.005
   lambda_ce: 0.8
-  lambda_hkd: 0.4
-  hkd_add: True
+  lambda_hkd: 0.6
   lambda_sp: 50
-  lambda_ft: 0.4 # 1
+  lambda_ft: 0.5 # 1
   lambda_weq: 0.75
-  lambda_mixup: 0
-  mixup_alpha: 0
   num_inv_iters: 5000
   inv_lr: 0.001
   inv_tau: 1000.0
   inv_alpha_pr: 0.001
   inv_alpha_rf: 50.0
   inv_resume_from: null
+  hkd_split: True
+  hkd_real_temp: 3.0
+  hkd_old_temp: 0.8
 data:
   root: /data
   dataset: cifar100
