--- a/rdfcil/config/imagenet/PASS_FOR_ISCF/imagenet100_iscf_5task_pass_setting.yaml
+++ b/rdfcil/config/imagenet/PASS_FOR_ISCF/imagenet100_iscf_5task_pass_setting.yaml
@@ -1,4 +1,4 @@
-seed_everything: 1698126972
+seed_everything: 1
 trainer:
   logger: true
   checkpoint_callback: false
@@ -18,10 +18,10 @@ trainer:
   progress_bar_refresh_rate: null
   overfit_batches: 0.0
   track_grad_norm: -1
-  check_val_every_n_epoch: 1
+  check_val_every_n_epoch: 30
   fast_dev_run: false
   accumulate_grad_batches: 1
-  max_epochs: 10
+  max_epochs: 160
   min_epochs: null
   max_steps: null
   min_steps: null
@@ -64,33 +64,34 @@ model:
   weight_decay: 0.0005
   lr_factor: 0.1
   milestones:
-  - 4
-  - 8
+  - 80
+  - 120
+  - 150
   finetuning_epochs: 0
   finetuning_lr: 0.005
-  lambda_ce: 0.5
-  lambda_hkd: 0.15
-  lambda_sp: 0.5
-  num_inv_iters: 10
+  lambda_ce: 0.8
+  lambda_hkd: 0.5
+  lambda_sp: 50
+  lambda_ft: 0.2 # 1
+  lambda_weq: 0.75
+  fc_bias: true  
+  num_inv_iters: 10000
   inv_lr: 0.001
   inv_tau: 1000.0
   inv_alpha_pr: 0.001
   inv_alpha_rf: 50.0
   inv_resume_from: null
-  fc_bias: True
 data:
-  root: /data
-  dataset: cifar100
-  batch_size: 128
-  num_workers: 4
+  # Please replace the root with your own dataset root path
+  root: ./data
+  dataset: imagenet100
+  batch_size: 64
+  num_workers: 16
   val_splits: 0
   val_seed: 42
-  num_tasks: 20
+  num_tasks: 5
   current_task: 0
-  class_order: []
+  # Following is the class order used in our experiments
+  class_order: [68, 56, 78, 8, 23, 84, 90, 65, 74, 76, 40, 89, 3, 92, 55, 9, 26, 80, 43, 38, 58, 70, 77, 1, 85, 19, 17, 50, 28, 53, 13, 81, 45, 82, 6, 59, 83, 16, 15, 44, 91, 41, 72, 60, 79, 52, 20, 10, 31, 54, 37, 95, 14, 71, 96, 98, 97, 2, 64, 66, 42, 22, 35, 86, 24, 34, 87, 21, 99, 0, 88, 27, 18, 94, 11, 12, 47, 25, 30, 46, 62, 69, 36, 61, 7, 63, 75, 5, 32, 4, 51, 48, 73, 93, 39, 67, 29, 49, 57, 33]
   init_task_splits: 0
-  task_seed: 42
   test_mode: seen
-  memory_algo: herding
-  memory_size: 0
-  dynamic_memory: false
